Reduced number of ANSI files - just 1 background now

--- a/bgg-hotness.cfg
+++ b/bgg-hotness.cfg
@@ -3,9 +3,7 @@ applicationAbbrev: BGG
 applicationName: BGGHotness
 applicationVersion: 1.0 
 applicationAuthor: Alpha
-outputFileName: /mystic/themes/bbs/text/mainmenu.ans
-bgFileName: /mystic/python/hotness/blood.ans
-headerFileName: /mystic/python/hotness/header.ans
-menuCmdFileName: /mystic/python/hotness/menu-options.ans
+outputFileName: mainmenu.ans
+bgFileName: background.ans
 releaseDate: 04/15/20
 modifiedDate: 04/15/20
