--- a/newsapi-example/breaking-news.cfg
+++ b/newsapi-example/breaking-news.cfg
@@ -5,6 +5,6 @@ applicationVersion: 1.0
 applicationAuthor: Alpha
 outputFileName: news.ans     
 headerFileName: header.ans
-newsApiKey: a8f1614992d54428ac971dfc921c916a  
+newsApiKey: <**GET YOUR OWN API KEY FROM NEWSAPI**>
 releaseDate: 04/15/20
 modifiedDate: 04/15/20
