--- a/bgg-example/bgg-hotness.cfg
+++ b/bgg-example/bgg-hotness.cfg
@@ -3,7 +3,7 @@ applicationAbbrev: BGG
 applicationName: BGGHotness
 applicationVersion: 1.0 
 applicationAuthor: Alpha
-outputFileName: mainmenu.ans
-bgFileName: background.ans
+outputFileName: /mystic/themes/bbs/text/mainmenu.ans
+bgFileName: /mystic/python/mystic-api-menu/background.ans
 releaseDate: 04/15/20
 modifiedDate: 04/15/20
