--- a/newsapi-example/breaking-news.cfg
+++ b/newsapi-example/breaking-news.cfg
@@ -3,8 +3,7 @@ applicationAbbrev: NEWS
 applicationName: BreakingNews
 applicationVersion: 1.0 
 applicationAuthor: Alpha
-outputFileName: news.ans     
-headerFileName: header.ans
-newsApiKey: <**GET YOUR OWN API KEY FROM NEWSAPI**>
+outputFileName: NEWS.ANS                    # Write this to whatever file/folder you want
+newsApiKey: !!CHANGE ME!!                   # Replace with your NewsAPI key 
 releaseDate: 04/15/20
-modifiedDate: 04/15/20
+modifiedDate: 08/27/20
